--- a/.deploy-now/portfolio/.env.template
+++ b/.deploy-now/portfolio/.env.template
@@ -30,12 +30,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=$IONOS_MAIL_HOST
-MAIL_PORT=$IONOS_MAIL_PORT
-MAIL_USERNAME="$IONOS_MAIL_USERNAME"
-MAIL_PASSWORD="$IONOS_MAIL_PASSWORD"
-MAIL_ENCRYPTION=$IONOS_MAIL_ENCRYPTION
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
 #MAIL_FROM_ADDRESS=$IONOS_MAIL_FROM_ADDRESS
 #MAIL_FROM_NAME="${APP_NAME}"
 
