--- a/.deploy-now/portfolio/.env.template
+++ b/.deploy-now/portfolio/.env.template
@@ -43,6 +43,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+MY_EMAIL="$MY_EMAIL"
+MY_EMAIL_PASSWORD="$MY_EMAIL_PASSWORD"
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
