changes to the deploy script

--- a/.deploy-now/portfolio/config.yaml
+++ b/.deploy-now/portfolio/config.yaml
@@ -47,6 +47,8 @@ deploy:
       - php artisan cache:clear
       - php artisan view:clear
       - php artisan config:clear
+      - php artisan route:clear
+      - php artisan config:cache
       - php artisan migrate --force -n
       - php artisan storage:link
       - php artisan optimize
