--- a/.deploy-now/portfolio/config.yaml
+++ b/.deploy-now/portfolio/config.yaml
@@ -48,6 +48,7 @@ deploy:
       - php artisan config:clear
       - php artisan route:clear
       - php artisan optimize
+      - php artisan config:cache
       - php artisan migrate --force -n
       - php artisan storage:link
       - php artisan up
