try autoload clear

--- a/.deploy-now/portfolio/config.yaml
+++ b/.deploy-now/portfolio/config.yaml
@@ -39,6 +39,7 @@ deploy:
       - find $(pwd) -type f -not -path "$(pwd)/logs/*" -exec chmod 664 {} \;
       - find $(pwd) -type d -not -name "logs" -exec chmod 775 {} \;
       - chmod -R o+w storage bootstrap/cache
+      - composer dump-autoload
       - php artisan storage:link
       - php artisan view:clear
       - php artisan config:clear
