--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "postcss": "^8.4.21",
         "tailwindcss": "^3.2.7",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "leaflet": "^1.9.3"
     }
 }
