--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
+        "jquery": "^3.6.4",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.21",
         "tailwindcss": "^3.2.7",
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "leaflet": "^1.9.3"
+        "leaflet": "^1.9.3",
+        "leaflet-easybutton": "^2.4.0"
     }
 }
