--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
-        "jquery": "^3.6.4",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.21",
         "tailwindcss": "^3.2.7",
@@ -17,6 +16,7 @@
     },
     "dependencies": {
         "leaflet": "^1.9.3",
-        "leaflet-easybutton": "^2.4.0"
+        "leaflet-easybutton": "^2.4.0",
+        "popper.js": "^1.16.1"
     }
 }
